@@ -173,7 +173,7 @@ logger.info('experiment %s' % env.experiment())
 logger.info('run        %d' % runnum)
 logger.info('dataset    %s' % (dsname))
 logger.info('detname    %s' % (detname))
-logger.info('calibDir:  %s' % env.calibDir())
+logger.info('calibDir:  %s' % env.calibDir().replace('//','/')
 
 print('TIME Detector initialization time = %.6f sec' % (time()-t0_sec))
 t0_sec = time()
